--- a/config/zones/US-CAL-CISO.yaml
+++ b/config/zones/US-CAL-CISO.yaml
@@ -171,6 +171,7 @@ contributors:
   - systemcatch
   - robertahunt
   - KabelWlan
+  - alejandranavcas
 country: US
 delays:
   production: 5
@@ -495,6 +496,7 @@ parsers:
   consumptionForecast: EIA.fetch_consumption_forecast
   production: US_CA.fetch_production
   productionCapacity: EIA.fetch_production_capacity
+  productionPerModeForecast: US_CA.fetch_wind_solar_forecasts
 region: Americas
 sources:
   INCER ACV:
