--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -430,58 +430,58 @@ jobs:
           name: component-screenshots
           path: web/cypress/screenshots
 
-  cypress_e2e:
-    name: Frontend / Cypress / E2E
-    needs: [eslint, typecheck, validate_generate_files, unit_test]
-    runs-on: ubuntu-24.04-arm
-    timeout-minutes: 10
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-      - name: Setup PNPM
-        uses: pnpm/action-setup@v4
-        with:
-          version: 9
-      - name: Setup Node
-        uses: actions/setup-node@v4
-        with:
-          node-version-file: './web/.node-version'
-      - name: Cache Cypress binary
-        id: cache-cypress
-        uses: actions/cache@v4
-        with:
-          path: ~/.cache/Cypress
-          key: ${{ runner.os }}-cypress-${{ hashFiles('./web/pnpm-lock.yaml') }}
-      - name: Restore node_modules for web
-        id: cache-web
-        uses: actions/cache@v4
-        with:
-          path: web/node_modules
-          key: ${{ runner.os }}-node_modules-${{ hashFiles('./web/pnpm-lock.yaml') }}
-      - name: Install web dependencies
-        if: steps.cache-web.outputs.cache-hit != 'true'
-        run: pnpm install --frozen-lockfile
-        working-directory: ./web
-      - name: Install Cypress binary
-        if: steps.cache-cypress.outputs.cache-hit != 'true'
-        run: pnpm exec cypress install
-        working-directory: ./web
-      - name: Cypress run e2e tests
-        uses: cypress-io/github-action@v6
-        env:
-          TZ: Europe/Copenhagen
-        with:
-          working-directory: ./web
-          install: false
-          build: pnpm run build --mode testing
-          start: pnpm run preview
-          config: baseUrl=http://127.0.0.1:4173/
-      - name: Upload screenshots
-        uses: actions/upload-artifact@v4
-        if: failure()
-        with:
-          name: e2e-screenshots
-          path: web/cypress/screenshots
+  # cypress_e2e:
+  #   name: Frontend / Cypress / E2E
+  #   needs: [eslint, typecheck, validate_generate_files, unit_test]
+  #   runs-on: ubuntu-24.04-arm
+  #   timeout-minutes: 10
+  #   steps:
+  #     - name: Checkout
+  #       uses: actions/checkout@v4
+  #     - name: Setup PNPM
+  #       uses: pnpm/action-setup@v4
+  #       with:
+  #         version: 9
+  #     - name: Setup Node
+  #       uses: actions/setup-node@v4
+  #       with:
+  #         node-version-file: './web/.node-version'
+  #     - name: Cache Cypress binary
+  #       id: cache-cypress
+  #       uses: actions/cache@v4
+  #       with:
+  #         path: ~/.cache/Cypress
+  #         key: ${{ runner.os }}-cypress-${{ hashFiles('./web/pnpm-lock.yaml') }}
+  #     - name: Restore node_modules for web
+  #       id: cache-web
+  #       uses: actions/cache@v4
+  #       with:
+  #         path: web/node_modules
+  #         key: ${{ runner.os }}-node_modules-${{ hashFiles('./web/pnpm-lock.yaml') }}
+  #     - name: Install web dependencies
+  #       if: steps.cache-web.outputs.cache-hit != 'true'
+  #       run: pnpm install --frozen-lockfile
+  #       working-directory: ./web
+  #     - name: Install Cypress binary
+  #       if: steps.cache-cypress.outputs.cache-hit != 'true'
+  #       run: pnpm exec cypress install
+  #       working-directory: ./web
+  #     - name: Cypress run e2e tests
+  #       uses: cypress-io/github-action@v6
+  #       env:
+  #         TZ: Europe/Copenhagen
+  #       with:
+  #         working-directory: ./web
+  #         install: false
+  #         build: pnpm run build --mode testing
+  #         start: pnpm run preview
+  #         config: baseUrl=http://127.0.0.1:4173/
+  #     - name: Upload screenshots
+  #       uses: actions/upload-artifact@v4
+  #       if: failure()
+  #       with:
+  #         name: e2e-screenshots
+  #         path: web/cypress/screenshots
 
   # Python checks
   python_formatting:
