--- a/config/zones/KP.yaml
+++ b/config/zones/KP.yaml
@@ -1,3 +1,62 @@
+capacity:
+  hydro:
+    - datetime: '2017-01-01'
+      source: IRENA.org
+      value: 4761.0
+    - datetime: '2018-01-01'
+      source: IRENA.org
+      value: 4790.0
+    - datetime: '2020-01-01'
+      source: IRENA.org
+      value: 4865.0
+    - datetime: '2022-01-01'
+      source: IRENA.org
+      value: 4890.0
+  nuclear:
+    - datetime: '2023-01-01'
+      source: IRENA.org
+      value: 20.0
+  solar:
+    - datetime: '2017-01-01'
+      source: IRENA.org
+      value: 36.31
+    - datetime: '2018-01-01'
+      source: IRENA.org
+      value: 49.94
+    - datetime: '2019-01-01'
+      source: IRENA.org
+      value: 64.97
+    - datetime: '2020-01-01'
+      source: IRENA.org
+      value: 78.97
+    - datetime: '2021-01-01'
+      source: IRENA.org
+      value: 101.97
+    - datetime: '2022-01-01'
+      source: IRENA.org
+      value: 115.52
+    - datetime: '2023-01-01'
+      source: IRENA.org
+      value: 129.19
+  unknown:
+    - datetime: '2017-01-01'
+      source: IRENA.org
+      value: 2960.5
+    - datetime: '2018-01-01'
+      source: IRENA.org
+      value: 3360.5
+    - datetime: '2022-01-01'
+      source: IRENA.org
+      value: 3380.5
+  wind:
+    - datetime: '2017-01-01'
+      source: IRENA.org
+      value: 1.33
+    - datetime: '2020-01-01'
+      source: IRENA.org
+      value: 1.6
 country: KP
+parsers:
+  productionCapacity: IRENA.fetch_production_capacity
 region: Asia
 timezone: Asia/Pyongyang
