--- a/config/zones/PY.yaml
+++ b/config/zones/PY.yaml
@@ -3,6 +3,44 @@ bounding_box:
     - -28.08684214299994
   - - -53.74528885899994
     - -18.78672861699995
+capacity:
+  biomass:
+    - datetime: '2017-01-01'
+      source: IRENA.org
+      value: 39.42
+    - datetime: '2019-01-01'
+      source: IRENA.org
+      value: 41.42
+  hydro:
+    - datetime: '2017-01-01'
+      source: IRENA.org
+      value: 8800.0
+    - datetime: '2019-01-01'
+      source: IRENA.org
+      value: 8824.0
+  oil:
+    - datetime: '2017-01-01'
+      source: IRENA.org
+      value: 0.5
+    - datetime: '2019-01-01'
+      source: IRENA.org
+      value: 26.19
+  solar:
+    - datetime: '2017-01-01'
+      source: IRENA.org
+      value: 0.06
+    - datetime: '2020-01-01'
+      source: IRENA.org
+      value: 0.15
+    - datetime: '2022-01-01'
+      source: IRENA.org
+      value: 1.17
+  wind:
+    - datetime: '2020-01-01'
+      source: IRENA.org
+      value: 0.02
 country: PY
+parsers:
+  productionCapacity: IRENA.fetch_production_capacity
 region: Americas
 timezone: America/Asuncion
