--- a/config/zones/RW.yaml
+++ b/config/zones/RW.yaml
@@ -1,3 +1,57 @@
+capacity:
+  biomass:
+    - datetime: '2017-01-01'
+      source: IRENA.org
+      value: 0.84
+  coal:
+    - datetime: '2017-01-01'
+      source: IRENA.org
+      value: 15.0
+    - datetime: '2022-01-01'
+      source: IRENA.org
+      value: 50.0
+  gas:
+    - datetime: '2017-01-01'
+      source: IRENA.org
+      value: 25.0
+  hydro:
+    - datetime: '2017-01-01'
+      source: IRENA.org
+      value: 98.13
+    - datetime: '2019-01-01'
+      source: IRENA.org
+      value: 109.0
+    - datetime: '2020-01-01'
+      source: IRENA.org
+      value: 118.82
+    - datetime: '2022-01-01'
+      source: IRENA.org
+      value: 124.16
+  oil:
+    - datetime: '2017-01-01'
+      source: IRENA.org
+      value: 74.14
+  solar:
+    - datetime: '2017-01-01'
+      source: IRENA.org
+      value: 16.85
+    - datetime: '2018-01-01'
+      source: IRENA.org
+      value: 18.54
+    - datetime: '2019-01-01'
+      source: IRENA.org
+      value: 22.05
+    - datetime: '2020-01-01'
+      source: IRENA.org
+      value: 23.65
+    - datetime: '2021-01-01'
+      source: IRENA.org
+      value: 25.01
+    - datetime: '2022-01-01'
+      source: IRENA.org
+      value: 26.32
 country: RW
+parsers:
+  productionCapacity: IRENA.fetch_production_capacity
 region: Africa
 timezone: Africa/Kigali
