--- a/config/zones/TL.yaml
+++ b/config/zones/TL.yaml
@@ -1,3 +1,47 @@
+capacity:
+  biomass:
+    - datetime: '2017-01-01'
+      source: IRENA.org
+      value: 0.02
+    - datetime: '2023-01-01'
+      source: IRENA.org
+      value: 0.05
+  hydro:
+    - datetime: '2017-01-01'
+      source: IRENA.org
+      value: 0.35
+  oil:
+    - datetime: '2017-01-01'
+      source: IRENA.org
+      value: 316.27
+  solar:
+    - datetime: '2017-01-01'
+      source: IRENA.org
+      value: 1.04
+    - datetime: '2018-01-01'
+      source: IRENA.org
+      value: 0.82
+    - datetime: '2019-01-01'
+      source: IRENA.org
+      value: 0.59
+    - datetime: '2020-01-01'
+      source: IRENA.org
+      value: 0.36
+    - datetime: '2021-01-01'
+      source: IRENA.org
+      value: 0.35
+    - datetime: '2022-01-01'
+      source: IRENA.org
+      value: 0.39
+    - datetime: '2023-01-01'
+      source: IRENA.org
+      value: 0.41
+  unknown:
+    - datetime: '2017-01-01'
+      source: IRENA.org
+      value: 29.4
 country: TL
+parsers:
+  productionCapacity: IRENA.fetch_production_capacity
 region: Asia
 timezone: Asia/Dili
