--- a/config/zones/TZ.yaml
+++ b/config/zones/TZ.yaml
@@ -3,6 +3,67 @@ bounding_box:
     - -12.231828252510063
   - - 40.948204482044844
     - -0.49999995121406804
+capacity:
+  biomass:
+    - datetime: '2017-01-01'
+      source: IRENA.org
+      value: 70.19
+  gas:
+    - datetime: '2017-01-01'
+      source: IRENA.org
+      value: 734.0
+    - datetime: '2018-01-01'
+      source: IRENA.org
+      value: 974.0
+  hydro:
+    - datetime: '2017-01-01'
+      source: IRENA.org
+      value: 589.14
+    - datetime: '2018-01-01'
+      source: IRENA.org
+      value: 588.54
+    - datetime: '2019-01-01'
+      source: IRENA.org
+      value: 596.04
+    - datetime: '2020-01-01'
+      source: IRENA.org
+      value: 597.74
+    - datetime: '2021-01-01'
+      source: IRENA.org
+      value: 598.24
+    - datetime: '2022-01-01'
+      source: IRENA.org
+      value: 598.55
+  oil:
+    - datetime: '2017-01-01'
+      source: IRENA.org
+      value: 342.72
+    - datetime: '2018-01-01'
+      source: IRENA.org
+      value: 343.68
+  solar:
+    - datetime: '2017-01-01'
+      source: IRENA.org
+      value: 13.21
+    - datetime: '2018-01-01'
+      source: IRENA.org
+      value: 17.48
+    - datetime: '2019-01-01'
+      source: IRENA.org
+      value: 15.54
+    - datetime: '2020-01-01'
+      source: IRENA.org
+      value: 16.77
+    - datetime: '2021-01-01'
+      source: IRENA.org
+      value: 19.15
+    - datetime: '2022-01-01'
+      source: IRENA.org
+      value: 19.92
+  wind:
+    - datetime: '2020-01-01'
+      source: IRENA.org
+      value: 2.4
 country: TZ
 emissionFactors:
   lifecycle:
@@ -52,5 +113,7 @@ fallbackZoneMixes:
         solar: 0.003117324755408123
         unknown: 0.0
         wind: 0.0
+parsers:
+  productionCapacity: IRENA.fetch_production_capacity
 region: Africa
 timezone: Africa/Dar_es_Salaam
