feat(app): remove exchange zone disclaimer

--- a/config/zones/US-CAR-SC.yaml
+++ b/config/zones/US-CAR-SC.yaml
@@ -74,8 +74,7 @@ delays:
   consumption: 30
   consumptionForecast: 30
   production: 48
-disclaimer: Data for real-time consumption and generation mix is estimated. Real-time
-  exchanges are not available. This zone includes a third of the nuclear related electricity
+disclaimer: This zone includes a third of the nuclear related electricity
   production from the balancing authority South Carolina Electric & Gas Company. Read
   more on the zone definition wiki page.
 emissionFactors:
