--- a/config/zones/US-SW-WALC.yaml
+++ b/config/zones/US-SW-WALC.yaml
@@ -86,8 +86,7 @@ delays:
   consumption: 30
   consumptionForecast: 30
   production: 48
-disclaimer: Data for real-time consumption and generation mix is estimated. Real-time
-  exchanges are not available. This zone includes all electricity production from
+disclaimer: This zone includes all electricity production from
   the generation-only balancing authority Griffith Energy, LLC. Read more on the zone
   definition wiki page.
 emissionFactors:
