--- a/config/zones/US-NW-BPAT.yaml
+++ b/config/zones/US-NW-BPAT.yaml
@@ -101,8 +101,7 @@ delays:
   consumption: 30
   consumptionForecast: 30
   production: 48
-disclaimer: Data for real-time consumption and generation mix is estimated. Real-time
-  exchanges are not available. This zone includes all wind related electricity production
+disclaimer: This zone includes all wind related electricity production
   from the generation-only balancing authority Avangrid Renewables, LLC. Read more
   on the zone definition wiki page.
 emissionFactors:
