--- a/config/zones/US-NW-NWMT.yaml
+++ b/config/zones/US-NW-NWMT.yaml
@@ -98,8 +98,7 @@ delays:
   consumption: 30
   consumptionForecast: 30
   production: 48
-disclaimer: Data for real-time consumption and generation mix is estimated. Real-time
-  exchanges are not available. This zone includes all electricity production from
+disclaimer: This zone includes all electricity production from
   the generation-only balancing authorities NaturEner Power Watch, LLC and NaturEner
   Wind Watch, LLC. Read more on the wiki page.
 emissionFactors:
