--- a/config/zones/US-CENT-SWPP.yaml
+++ b/config/zones/US-CENT-SWPP.yaml
@@ -629,6 +629,8 @@ parsers:
   production: US_SPP.fetch_production
   productionCapacity: EIA.fetch_production_capacity
   productionPerModeForecast: US_SPP.fetch_wind_solar_forecasts
+  dayaheadLocationalMarginalPrice: US_SPP.fetch_dayahead_locational_marginal_price
+  realtimeLocationalMarginalPrice: US_SPP.fetch_realtime_locational_marginal_price
 region: Americas
 sources:
   INCER ACV:
