--- a/config/zones/AU-QLD.yaml
+++ b/config/zones/AU-QLD.yaml
@@ -62,6 +62,7 @@ contributors:
   - brandongalbraith
   - jarek
   - corradio
+  - alejandranavcas
 country: AU
 delays:
   production: 96
@@ -330,5 +331,6 @@ parsers:
   price: OPENNEM.fetch_price
   production: OPENNEM.fetch_production
   productionCapacity: OPENNEM.fetch_production_capacity
+  consumptionForecast: AEMO.fetch_consumption_forecast
 region: Oceania
 timezone: Australia/Brisbane
