--- a/config/zones/AU-VIC.yaml
+++ b/config/zones/AU-VIC.yaml
@@ -56,6 +56,7 @@ capacity:
 contributors:
   - jarek
   - corradio
+  - alejandranavcas
 country: AU
 delays:
   production: 96
@@ -324,5 +325,6 @@ parsers:
   price: OPENNEM.fetch_price
   production: OPENNEM.fetch_production
   productionCapacity: OPENNEM.fetch_production_capacity
+  consumptionForecast: AEMO.fetch_consumption_forecast
 region: Oceania
 timezone: Australia/Melbourne
