--- a/config/zones/US-MIDW-MISO.yaml
+++ b/config/zones/US-MIDW-MISO.yaml
@@ -546,6 +546,7 @@ contributors:
   - systemcatch
   - robertahunt
   - KabelWlan
+  - alejandranavcas
 country: US
 delays:
   consumption: 30
@@ -876,10 +877,10 @@ fallbackZoneMixes:
         wind: 0.14722782107459684
 parsers:
   consumption: EIA.fetch_consumption
-  consumptionForecast: EIA.fetch_consumption_forecast
+  consumptionForecast: US_MISO.fetch_consumption_forecast
   production: EIA.fetch_production_mix
   productionCapacity: EIA.fetch_production_capacity
-  productionPerModeForecast: US_MISO.fetch_wind_forecast
+  productionPerModeForecast: US_MISO.fetch_wind_solar_forecasts
 region: Americas
 sources:
   INCER ACV:
