--- a/web/package.json
+++ b/web/package.json
@@ -112,7 +112,8 @@
     "tiny-invariant": "^1.3.1",
     "topojson-client": "^3.1.0",
     "topojson-server": "^3.0.1",
-    "use-resize-observer": "^9.1.0"
+    "use-resize-observer": "^9.1.0",
+    "@intercom/messenger-js-sdk": "^0.0.14"
   },
   "devDependencies": {
     "@mdx-js/react": "^2.3.0",
