--- a/config/zones/AU-NT.yaml
+++ b/config/zones/AU-NT.yaml
@@ -10,6 +10,7 @@ capacity:
 contributors:
   - unitrium
   - amv213
+  - alejandranavcas
 country: AU
 delays:
   consumption: 30
@@ -237,5 +238,6 @@ parsers:
   consumption: NTESMO.fetch_consumption
   price: NTESMO.fetch_price
   production: NTESMO.fetch_production
+  consumptionForecast: NTESMO.fetch_consumption_forecast
 region: Oceania
 timezone: Australia/Darwin
