--- a/config/zones/BE.yaml
+++ b/config/zones/BE.yaml
@@ -179,6 +179,10 @@ capacity:
     - datetime: '2025-01-01'
       source: entsoe.eu
       value: 5439.0
+  battery storage:
+    - datetime: '2023-10-01'
+      source: elia.be
+      value: 50.0
 contributors:
   - corradio
   - nessie2013
